--- a/templates/email/email_receipt.html
+++ b/templates/email/email_receipt.html
@@ -12,7 +12,7 @@
       <p style="margin-bottom: 30px;">Atmosphere funds for US$ {{body.amount}}.</p>
     </div>
     <p>
-        Approval Code (Pagadito): {{body.pay_token}}
+        Reference Code (Pagadito): {{body.reference}}
     </p>
   </div>
 </div>
