--- a/templates/email/email.html
+++ b/templates/email/email.html
@@ -1,15 +1,76 @@
+<!DOCTYPE html>
 <html>
-<body style="margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;">
-<div style="width: 100%; background: #efefef; border-radius: 10px; padding: 10px;">
-  <div style="margin: 0 auto; width: 90%; text-align: center;">
-    <h1 style="background-color: rgba(0, 53, 102, 1); padding: 5px 10px; border-radius: 5px;">
-      Atmosphere Login verification code
-    </h1>
-    <div style="margin: 30px auto; background: white; width: 40%; border-radius: 10px; padding: 50px; text-align: center;">
-      <h3 style="margin-bottom: 100px; font-size: 24px;">{{ body.code }}</h3>
-      <p style="margin-bottom: 30px;">Please copy or type the code above.</p>
-    </div>
-  </div>
-</div>
+<head>
+	<title>Login Verification Code - Atmosphere</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
+		body {
+			background-color: #f3f3f3;
+			font-family: Arial, sans-serif;
+			font-size: 14px;
+			line-height: 1.5;
+			color: #333333;
+			padding: 0;
+			margin: 0;
+		}
+		
+		.container {
+			background-color: #663399;
+			padding: 20px;
+			color: #ffffff;
+			text-align: center;
+			border-radius: 10px 10px 0 0;
+		}
+		
+		h1 {
+			margin-top: 0;
+			font-size: 24px;
+			font-weight: bold;
+			color: #ffffff;
+		}
+		
+		.content {
+			background-color: #ffffff;
+			padding: 20px;
+			border-radius: 0 0 10px 10px;
+			box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+		}
+		
+		p {
+			margin-top: 0;
+			margin-bottom: 1em;
+		}
+		
+		.btn {
+			display: inline-block;
+			background-color: #663399;
+			color: #ffffff;
+			padding: 10px 20px;
+			border-radius: 5px;
+			text-decoration: none;
+			margin-top: 20px;
+			font-weight: bold;
+			transition: background-color 0.3s;
+		}
+		
+		.btn:hover {
+			background-color: #5e2d8f;
+		}
+	</style>
+</head>
+<body>
+	<div class="container">
+		<h1>Login Verification Code - Atmosphere</h1>
+	</div>
+	<div class="content">
+		<p>Dear Customer,</p>
+		<p>Your verification code for logging in to your Atmosphere account is: <strong>{{ body.code }}</strong></p>
+    <p>Please input the code to confirm you want to log in into your account.</p>
+		<p>By using Atmosphere, you agree to our <a href="{{ body.url }}/terms-and-conditions" style="color: #663399;">Terms and Conditions</a>.</p>
+		<p>Thank you for using Atmosphere!</p>
+		<p>Best regards,</p>
+		<p>The Atmosphere Team</p>
+	</div>
 </body>
 </html>
