--- a/templates/email/email_receipt.html
+++ b/templates/email/email_receipt.html
@@ -1,20 +1,80 @@
+<!DOCTYPE html>
 <html>
-<body style="margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;">
-<div style="width: 100%; background: #efefef; border-radius: 10px; padding: 10px;">
-  <div style="margin: 0 auto; width: 90%; text-align: center;">
-    <h1 style="background-color: rgb(0, 110, 213); padding: 5px 10px; border-radius: 5px;">
-        Payment completed successfully!
-    </h1>
-    <h2>
-        Receipt No. {{ body.ern }}
-    </h2>
-    <div style="margin: 30px auto; background: white; width: 40%; border-radius: 10px; padding: 50px; text-align: center;">
-      <p style="margin-bottom: 30px;">Atmosphere funds for US$ {{body.amount}}.</p>
-    </div>
-    <p>
-        Reference Code (Pagadito): {{body.reference}}
-    </p>
-  </div>
-</div>
+<head>
+	<title>Payment Confirmation No.{{ body.ern }} - Atmosphere</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
+		body {
+			background-color: #f3f3f3;
+			font-family: Arial, sans-serif;
+			font-size: 14px;
+			line-height: 1.5;
+			color: #333333;
+			padding: 0;
+			margin: 0;
+		}
+		
+		.container {
+			background-color: #663399;
+			padding: 20px;
+			color: #ffffff;
+			text-align: center;
+			border-radius: 10px 10px 0 0;
+		}
+		
+		h1 {
+			margin-top: 0;
+			font-size: 24px;
+			font-weight: bold;
+			color: #ffffff;
+		}
+		
+		.content {
+			background-color: #ffffff;
+			padding: 20px;
+			border-radius: 0 0 10px 10px;
+			box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+		}
+		
+		p {
+			margin-top: 0;
+			margin-bottom: 1em;
+		}
+		
+		.btn {
+			display: inline-block;
+			background-color: #663399;
+			color: #ffffff;
+			padding: 10px 20px;
+			border-radius: 5px;
+			text-decoration: none;
+			margin-top: 20px;
+			font-weight: bold;
+			transition: background-color 0.3s;
+		}
+		
+		.btn:hover {
+			background-color: #5e2d8f;
+		}
+	</style>
+</head>
+<body>
+	<div class="container">
+		<h1>Payment Confirmation - Atmosphere</h1>
+	</div>
+	<div class="content">
+		<p>Dear customer,</p>
+		<p>We're happy to let you know that your payment of US$ {{body.amount}} for adding funds to your Atmosphere account has been successfully processed.</p>
+		<p>You can view your account balance by logging in to your Atmosphere account:</p>
+		<a href="{{ body.url }}/my-account" class="btn">View My Account</a>
+		<p>If you have any questions or concerns about this transaction, please don't hesitate to <a href="{{ body.url }}/get-help" class="btn">contact us</a></p>
+    <p>Reference Code (Pagadito): {{body.reference}}</p>
+    <p>Receipt Number: {{body.ern}}</p>
+		<p>By using Atmosphere, you agree to our <a href="{{ body.url }}/terms-and-conditions" style="color: #663399;">Terms and Conditions</a>.</p>
+		<p>Thank you for using Atmosphere!</p>
+		<p>Best regards,</p>
+		<p>The Atmosphere Team</p>
+	</div>
 </body>
 </html>
