Adding small footer into emails

--- a/templates/email/email.html
+++ b/templates/email/email.html
@@ -72,5 +72,21 @@
 		<p>Best regards,</p>
 		<p>The Atmosphere Team</p>
 	</div>
+  <div class="content">
+      <a
+        style="color: #663399;"
+        href="https://innovare.es"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Powered by
+        <img src="{{ body.url }}/innovare.svg" alt="Innovare Logo" style="width:100px;" />
+      </a>
+      <div className="items-left">
+        <a href="{{ body.url }}/get-help" style="color: #663399;">Help</a>
+        <span>|</span>
+        <a href="{{ body.url }}/terms-and-conditions" style="color: #663399;">Terms & conditions</a>
+      </div>
+  </div>
 </body>
 </html>
